# automatic-data-extractor

./: .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .lychee.toml  .markdownlint-cli2.docs.jsonc  .markdownlint-cli2.yaml  ADE_GLOSSARY.md  AGENTS.md  BACKEND_API_RENAME_PLAN.md  BACKEND_REWRITE_PLAN.md  BEST_PRACTICE_VIOLATIONS.md  CHANGELOG.md  CLI_IMPLEMENTATION_PLAN.md  CONFIGURATIONS_API_ROUTE_REWRITE.md  CONTRIBUTING.md  CURRENT_TASK.md  DOCUMENTATION.md  DOCUMENTATION_CURRENT_TASK.md  DOCUMENTATION_REWRITE_PLAN.md  DYNACONF_MIGRATION_PLAN.md  Dockerfile  Dockerfile.web  FRONTEND_DESIGN.md  FRONTEND_NEXT_TASK.md  LICENSE  PREVIOUS_TASK.md  README.md  SERVICE_ACCOUNT_REWRITE_PLAN.md  WORKPACKAGE-orchestration-migration.md  WORKPACKAGE.md  WORKSPACE_API_ROUTE_REWRITE.md  WORKSPACE_ID_REWRITE_PLAN.md  ade  ade-engine-bundle.md  ade-web-bundle.md  alembic.ini  code_review_instructions.md  (+26 more)
apps/ade-api/: README.md  alembic.ini  conftest.py  pyproject.toml
apps/ade-api/migrations/: README.md  __init__.py  env.py  script.py.mako
apps/ade-api/tests/: __init__.py  conftest.py  utils.py
apps/ade-cli/: AGENTS.md  pyproject.toml
apps/ade-cli/tests/: test_build_command.py  test_bundle_command.py  test_cli_commands.py  test_common.py  test_copy_code_command.py  test_docker_commands.py  test_lint_cmd.py  test_tests_command.py
apps/ade-engine/: .importlinter  AGENTS.md  MANIFEST.in  README.md  docs-bundle.md  pyproject.toml
apps/ade-engine/config_package_example/: README.md  settings.toml
apps/ade-engine/docs/: 01-engine-runtime.md  02-config-and-manifest.md  03-io-and-table-detection.md  03-scripting-api-v3.md  04-column-mapping.md  05-normalization-and-validation.md  06-artifact-json.md  07-telemetry-events.md  08-hooks-and-extensibility.md  09-cli-and-integration.md  10-testing-and-quality.md  11-ade-event-model.md  12-run-summary-and-reporting.md  README copy.md  README.md  api.md  architecture.md  callable-contracts.md  config-package-conventions.md  configuration.md  development.md  hooks.md  output-ordering.md  overview.md  pipeline-and-registry.md  registry-spec.md  settings.md  testing-plan.md  troubleshooting.md  workflow.md
apps/ade-engine/tests/: conftest.py  test_architecture.py  test_artifact.py  test_cli.py  test_config_loader.py  test_engine_runtime.py  test_hooks.py  test_main.py  test_pipeline_runner_unit.py  test_runtime.py  test_schemas_artifact.py  test_schemas_manifest.py  test_schemas_run_summary.py  test_schemas_summaries.py  test_schemas_telemetry.py  test_summary_aggregator.py  test_telemetry.py  test_worker.py
apps/ade-engine/workpackages/: workpackage-template.md  wp-implement-ade-engine.md
apps/ade-worker/: README.md  pyproject.toml
apps/ade-worker/tests/: test_gc.py  test_paths.py  test_queue.py  test_repo.py  test_run_results.py  test_worker_subprocess.py
apps/api/: AGENTS.md  README.md  __init__.py  alembic.ini  conftest.py  pyproject.toml
apps/api/app/: main.py  openapi.json  routers.py  settings.py
apps/api/migrations/: README.md  __init__.py  env.py
apps/api/tests/: utils.py
backend/: .env.example  AGENTS.md  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt
backend/ade-api/: README.md
backend/ade-db/: README.md
backend/ade-storage/: README.md
backend/ade-worker/: README.md
backend/api/: __init__.py  main.py  settings.py
backend/api/core/: logging.py  service.py  settings.py
backend/api/db/: bootstrap.py  engine.py  session.py
backend/api/extensions/: __init__.py  middleware.py
backend/api/migrations/: README.md  env.py
backend/api/services/: __init__.py
backend/app/: __init__.py  api.py  app.py  cli.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/adapters/: __init__.py
backend/app/api/: __init__.py  errors.py  settings.py
backend/app/auth/: __init__.py  api_keys.py  dependencies.py  events.py  manage.py  passwords.py  service.py  sessions.py  sso.py  validation.py
backend/app/core/: config.py  errors.py  logging.py  message_hub.py  responses.py  schema.py  service.py  settings.py  task_queue.py
backend/app/db/: __init__.py  engine.py  mixins.py  session.py
backend/app/features/: __init__.py
backend/app/maintenance/: __init__.py  autopurge.py  purge.py
backend/app/migrations/: env.py
backend/app/platform/: __init__.py  config.py  ids.py  logging.py  middleware.py
backend/app/repositories/: documents_repo.py  jobs_repo.py  users_repo.py
backend/app/routes/: audit_events.py  auth.py  configuration_revisions.py  configurations.py  documents.py  events.py  health.py  jobs.py  snapshots.py
backend/app/schemas/: auth.py  workspaces.py
backend/app/scripts/: validate.py
backend/app/services/: __init__.py  audit_log.py  auth.py  auth_service.py  configuration_revisions.py  configurations.py  documents.py  documents_service.py  events.py  jobs.py  jobs_service.py  maintenance_status.py  snapshots.py  storage.py  users_service.py  workspaces_service.py
backend/app/shared/: __init__.py
backend/app/web/: README.md
backend/app/workers/: run_jobs.py
backend/cli/: __main__.py  app.py
backend/cli/commands/: __init__.py  api_keys.py
backend/cli/core/: runtime.py
backend/docs/: backend_porting_guardrails.md
backend/processor/: __init__.py  runner.py
backend/src/: paths.py  settings.py
backend/src/ade/: __init__.py  __main__.py
backend/src/ade_api/: AGENTS.md  __main__.py  asgi.py  db.py  main.py  openapi.json  settings.py
backend/src/ade_cli/: __init__.py  __main__.py  api.py  common.py  db.py  infra.py  local_dev.py  main.py  storage.py  version.py  web.py  worker.py
backend/src/ade_common/: __init__.py  paths.py
backend/src/ade_db/: __init__.py  __main__.py  base.py  engine.py  metadata.py  (+3 more)
backend/tests/: __init__.py  conftest.py  integration_support.py  test_audit_log.py  test_auth.py  test_backend_layout.py  test_configuration_revisions.py  test_configurations.py  test_db_migrations.py  test_document_purge.py  test_documents.py  test_events.py  test_health.py  test_jobs.py  test_snapshots.py  utils.py
(+5421 files in other folders)
