[project]
name = "ade-dev"
version = "0.0.0"
description = "ADE monorepo development environment."
requires-python = ">=3.14.2"
dependencies = [
  "ade-api",
  "ade-worker",
]

[dependency-groups]
dev = [
  "ade-api[dev]",
  "ade-worker[dev]",
]

[tool.uv.sources]
ade-api = { workspace = true }
ade-worker = { workspace = true }

[tool.uv.workspace]
members = [
  "apps/ade-api",
  "apps/ade-worker",
]
