[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "ade-cli"
version = "1.6.0"
description = "Python orchestration CLI for ADE."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CLAC IT Team" }]
license = { text = "Proprietary" }
dependencies = [
  "pyperclip>=1.8",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ade = "ade_cli.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"ade_cli" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ade_cli*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
