[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "ade-engine"
version = "1.6.1"
description = "Deterministic workbook normalization engine (detect → extract → map → normalize → render)."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "CLAC IT Team" }]
license = { text = "Proprietary" }
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2,<3",
  "typer>=0.12",
  "tomli>=2; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ade-engine = "ade_engine.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ade_engine*"]
