[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "ade-worker"
version = "0.2.0"
description = "ADE background worker (runs/environments)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "CLAC IT Team" }]
license = { text = "Proprietary" }
urls = { "Repository" = "https://github.com/clac-ca/automatic-data-extractor" }

# Runtime deps — keep minimal and independent of ade-api
# ade-engine provides the CLI and runtime engine.
dependencies = [
  # NOTE: Using `@main` is non-deterministic. We will switch to tags after they are set up in the repo.
  # Example: ade-engine @ git+https://github.com/clac-ca/ade-engine@v0.6.1
  "ade-engine @ git+https://github.com/clac-ca/ade-engine@main",

  "uv==0.9.26",
  "sqlalchemy==2.0.44",
  "psycopg[binary]==3.2.3",
  "azure-identity==1.25.1",
  "azure-storage-blob==12.26.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.1",
]

[project.scripts]
ade-worker = "ade_worker.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ade_worker*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
  "tests",
]
addopts = "-ra"
pythonpath = ["src"]
markers = [
  "unit: fast tests with no external dependencies",
  "integration: tests requiring external services (Postgres, etc.)",
]
