[project]
name = "ade_config"
version = "2.0.0"
description = "Example ADE config package (registry-based)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl==3.1.5",
  "polars==1.36.1",
  "ade-engine",
]

[tool.uv.sources]
ade-engine = { git = "https://github.com/clac-ca/ade-engine", tag = "v1.7.9" }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ade_config"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
