# ---------------------------------------------------------------------------
# ADE Config Package — pyproject.toml
# ---------------------------------------------------------------------------
# This defines how your ADE config package is built and installed.
#
# The ADE backend builds a venv per config, installs `ade_engine` and this
# package, and then runs the engine inside that venv. Any dependencies listed
# here will be available to your detectors / transforms / hooks.
# ---------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Keep the name stable; the import path for the config code is always
# `ade_config`, regardless of the project name here.
name = "ade-config"
version = "0.1.0"
description = "Default ADE config package template"
requires-python = ">=3.11"

# Add any extra libraries your config needs here. They will be installed
# into the same venv as `ade_engine`.
# Example:
# dependencies = [
#   "python-dateutil>=2.9",
# ]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ade_config*"]
namespaces = true

[tool.setuptools.package-data]
# Ensure the manifest ships in the wheel (ade_engine loads it at runtime)
ade_config = ["manifest.json"]
