# ---------------------------------------------------------------------------
# ADE Sandbox Config Package — pyproject.toml
# ---------------------------------------------------------------------------
# Minimal config used for sandbox and smoke test runs. The ADE backend builds
# a venv per config, installs `ade_engine` and this package, and then runs the
# engine inside that venv. Add dependencies here if sandbox hooks or detectors
# need them.
# ---------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Keep the name stable; the import path for the config code is always
# `ade_config`, regardless of the project name here.
name = "ade-sandbox-config"
version = "1.6.1"
description = "Minimal ADE config template for sandbox runs"
requires-python = ">=3.14"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ade_config*"]
namespaces = true

[tool.setuptools.package-data]
# Ensure the manifest ships in the wheel (ade_engine loads it at runtime)
ade_config = ["manifest.json"]
