[project]
name = "ade-config-template"
version = "2.0.0"
description = "Example ADE config package (registry-based)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ade-engine",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ade_config"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
